# corpus

./: .gitignore  .gitmodules  .mcp.json  CURRENT_ARCHITECTURE.md  FEATURES_ROADMAP.md  KNOWN_ISSUES.md  LOGGING_WEBSOCKET.md  PIPELINE_ARCHITECTURE.md  README.md  SETUP_FILTER.md  api_docs.html  start_corpus.sh  stop_corpus.sh
.claude/: settings.local.json
filters/frame-change-detector/: Cargo.toml  README.md  build.sh  pyproject.toml
filters/frame-change-detector/src/: lib.rs
orchestrator/: config.yaml  main.py  main_pipeline_swagger.py  main_swagger.py  orchestrator.py  pipeline_orchestrator.py  requirements.txt
