[package]
name = "frame-change-detector"
version = "0.1.0"
edition = "2021"

[lib]
name = "frame_change_detector"
crate-type = ["cdylib"]

[dependencies]
opencv = "0.91"
numpy = "0.21"
pyo3 = { version = "0.21", features = ["extension-module"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1