[package]
name = "frame-change-detector"
version = "0.1.0"
edition = "2021"

[lib]
name = "frame_change_detector"
crate-type = ["cdylib"]

[dependencies]
waldo_vision = "0.2.0"
pyo3 = { version = "0.21", features = ["extension-module"] }
image = "0.25"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1